# vitc-

./: CMakeLists.txt  README.md  convertir_imagen_a_csv.py  imagen_convertida.csv  imagen_convertida1.csv  main.cpp  main_fashion.cpp  predecir_imagen.cpp  predict.cpp  predict_fashion.cpp
clases/: activations.h  adam_optimizer.h  layers.h  matrix.h  mnist_loader.h  trainer.h  transformer.h
cpp/: activations.cpp  adam_optimizer.cpp  layers.cpp  matrix.cpp  mnist_loader.cpp  trainer.cpp  transformer.cpp
data/: pruebaropa.jpg:Zone.Identifier
entrenados/results/20250730_102921/: eval_stats.csv  train_stats.csv  vit_trained.pt
entrenados/results_fashion/20250730_102534/: eval_stats.csv  train_stats.csv  vit_fashion.pt
include/: custom_mnist_dataset.h  encoder_block.h  eval.h  mlp.h  multihead_attention.h  patch_embedding.h  train.h  utils.h  vit_module.h
src/: custom_mnist_dataset.cpp  encoder_block.cpp  eval.cpp  mlp.cpp  multihead_attention.cpp  patch_embedding.cpp  train.cpp  utils.cpp  vit_module.cpp
